--- a/style.css
+++ b/style.css
@@ -34,6 +34,18 @@ body {
     align-items: center;
 }
 
+.wifi_form {
+    margin-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+}
+
+#test {
+    display: block;
+}
+
 #login {
     text-align: center;
     margin-bottom: 5px;
@@ -176,6 +188,9 @@ a:hover {
     #logintext {
         margin-top: 15px;
         margin-bottom: 15px;
+    }
+    .wifi_form {
+        margin-top: 50px; display: flex; flex-wrap: wrap; flex-direction: column; align-items: center;
     }
 }
 
