--- a/style.css
+++ b/style.css
@@ -166,6 +166,13 @@ background: #fff;
     margin-top: 160px;
 }
 
+#powered_mikrotik {
+    text-align: center;
+    margin: 0;
+    margin-top: 20px;
+}
+}
+
 #powered_handle {
     text-align: center;
     margin: 0;
@@ -223,6 +230,9 @@ a:hover {
     #powered_verifypass {
         margin-top: 220px;
     }
+    #powered_mikrotik {
+        margin-top: 10px;
+    }
     #powered_handle {
         margin-top: 275px;
     }
@@ -254,6 +264,9 @@ and (max-device-width : 1024px)  {
     }
     #powered_verifypass {
         margin-top: 370px;
+    }
+    #powered_mikrotik {
+        margin-top: 80px;
     }
     #powered_handle {
         margin-top: 420px;
